# python-project-lvl2

./: .gitignore  Makefile  README.md  project_log.md  pyproject.toml  setup.cfg
.github/workflows/: lint-test.yml
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  ast_builder.py  gendiff.py  generate_dicts_difference_dict.py  input_parser.py
gendiff/formatters/: __init__.py  json.py  json_diff.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_gendiff.py  test_generate_dicts_difference_dict.py  test_input_parser.py  test_stringify_value.py
tests/fixtures/: expected.py  expected_dicts.py  expected_strings.py  nested1.yaml  nested2.yaml  plain1.json  plain1.yml  plain2.json  plain2.yaml  plain2.yml
tests/gendiff/: test_ast_builder.py  test_gendiff.py  test_input_parser.py
tests/gendiff/formatters/: test_plain.py  test_stylish.py
