[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "JSONs/YAMLs difference calculator utility"
authors = ["paalso <40a.pvl@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
